Z-index fix and card load

--- a/public/global.css
+++ b/public/global.css
@@ -461,7 +461,7 @@ input[type="radio"] {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 10;
+  z-index: 15;
 }
 
 .settings {
@@ -476,7 +476,7 @@ input[type="radio"] {
   transition: 0.5s;
   width: 360px;
   white-space: nowrap;
-  z-index: 10;
+  z-index: 15;
 }
 
 .settings-inner {
